--- a/zeroToHero/learnCss/htmlfiles/about.html
+++ b/zeroToHero/learnCss/htmlfiles/about.html
@@ -3,7 +3,7 @@
 <head>
 	<title>My first website!</title>
 	<link rel="stylesheet" type="text/css"
-	 href="cssFiles/style.css">
+	 href="cssFiles/style2.css">
 </head>
 <body>
 	<header>
@@ -16,7 +16,9 @@
 		</nav>
 	</header>
 	<section>
+
 		<h2>About</h2>
+		<img src="natue.jpg" width="200px" height="60px">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -24,5 +26,8 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</section>
+	<footer>
+		lemi's website
+	</footer>
 </body>
 </html>
