--- a/zeroToHero/learnCss/htmlfiles/login.html
+++ b/zeroToHero/learnCss/htmlfiles/login.html
@@ -3,7 +3,7 @@
 <head>
 	<title>My first website!</title>
 	<link rel="stylesheet" type="text/css"
-	 href="cssFiles/style2.css">
+	 href="cssFiles/style.css">
 </head>
 <body>
 	<header>
