--- a/dom/index.html
+++ b/dom/index.html
@@ -10,40 +10,37 @@
 </head>
 
 <body>
-    <div class="box">
-        <div class="border">
-            <h1>Basic DOM</h1>
-            <p>
-                This is a list of stuff
-                <ol id='list'>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ol>
-                <button id="btnShow">Show</button>
-                <button id="btnAdd">Add</button>
-            </p>
+    <div class='TheDom'>
+        <div class="box">
+            <div class="border">
+                <h1>Basic DOM</h1>
+                <p>
+                    This is a list of stuff
+                    <ol id='list'>
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                    </ol>
+                    <button id="btnShow">Show</button>
+                    <button id="btnAdd">Add</button>
+                </p>
+
+            </div>
+        </div>
+
+        <div class="game">
+            <h1>Card Games</h1>
+            <div id="addCard">
+                <button id="addy">Add Card</button>
+            </div>
+            <div id='card'></div>
 
         </div>
+        <div class="rightSide">
+            <h1>Right Side of Things</h1>
+        </div>
     </div>
 
-    <div class="game">
-        <h1>Card Games</h1>
-        <div class="addCard">
-            <button>Add Card</button>
-        </div>
-        <div class="card">
-            <p>Card 1</p>
-            <button>Add Before</button>
-            <button>Add After</button>
-            <br />
-            <br />
-            <button>Delete</button>
-        </div>
-    </div>
-    <div class="rightSide">
-        <h1>Right Side of Things</h1>
-    </div>
 
 
 
