--- a/dom/100/100.html
+++ b/dom/100/100.html
@@ -10,9 +10,11 @@
 <body>
   <div class="list">
     <h1>Working with Arrays</h1>
-    <input id="num" type='text' <br>
+    <input id="num" type='text'>
     <br>
-    <div id="message"></div>
+    <br>
+    <div id="message">
+    </div>
     <button id="add">Add</button>
     <button id="show">Show</button>
     <button id="total">Total</button>
